# AppleMusic-Downloader

./: .gitignore  1f  AppleMusicDownloader.exe.manifest  AppleMusicDownloader.nsi  AppleMusicDownloader.spec  CHANGELOG.md  Dockerfile  For_FlavortownReviewers.md  LICENSE  README.md  README_en.md  TODO.md  __main__.py  api.md  debug_admin.py  icon.icns  keygen.py  pyproject.toml  railway.json  requirements.txt  settings.json  test_launcher.py
.github/workflows/: build.yml  ci-build-windows.yml  publish-to-pypi.yml
Apple Music/Charlie Puth/Nine Track Mind/: 02 Dangerously.lrc
Apple Music/ROSÉ/rosie/: 04 toxic till the end.lrc
docs/: api.md
functions/api/: _proxy.ts
gamdl/: __main__.py  apple_music_api.py  backup_ui.py  cli.py  downloader.py  downloader_song.py  fluent_gui.py  fluent_main_window.py  itunes_api.py  utils.py
scripts/: build.sh  fetch_tools.ps1  fetch_tools.sh
src/amdl/: __init__.py  __main__.py  apple_music_api.py  backup_ui.py  cli.py  constants.py  converter.py  core_downloader.py  custom_formatter.py  dependency_manager.py  desktop_entry.py  download_worker.py  downloader.py  downloader_music_video.py  downloader_post.py  downloader_song.py  downloader_song_legacy.py  enums.py  fluent_gui.py  gui_conversion.py  hardcoded_wvd.py  i18n.py  itunes_api.py  launcher.py  main_window.py  models.py  server.py  settings_store.py  task_manager.py  ui_builder.py  utils.py
src/amdl/Apple Music/Khalid/Free Spirit/: 17 Saturday Nights.lrc
src/fronted/: next.config.ts  package-lock.json  package.json
src/fronted/app/: .layout.tsx.swp  Providers.tsx  globals.css  i18n.tsx  layout.tsx  page.tsx  service.tsx  theme.tsx
src/fronted/app/components/: TagInput.tsx  download.tsx  howToInstallDependencies.tsx  queue.tsx  settings.tsx  sidebar.tsx
src/fronted/app/widgets/: sidebar.tsx
src/gui/: README.md  pubspec.yaml
src/gui/linux/: CMakeLists.txt
src/gui/linux/runner/: my_application.cc
src/gui/macos/Runner.xcodeproj/: project.pbxproj
src/gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/gui/macos/Runner/Configs/: AppInfo.xcconfig
src/gui/test/: widget_test.dart
src/gui/web/: index.html  manifest.json
src/gui/windows/: CMakeLists.txt
src/gui/windows/runner/: Runner.rc  main.cpp
