[project]
name = "apple-music-downloader"
description = "一个功能强大的 Apple Music 下载工具，支持下载歌曲、音乐视频和帖子内容。"
requires-python = ">=3.9"
authors = [{ name = "wenfeng110402" }]
dependencies = [
    "click",
    "colorama",
    "inquirerpy",
    "m3u8",
    "mutagen",
    "pillow",
    "pywidevine",
    "pyyaml",
    "termcolor",
    "yt-dlp",
    "PyQt6",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/wenfeng110402/AppleMusic-Downloader"
repository = "https://github.com/wenfeng110402/AppleMusic-Downloader"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
amdl = "amdl.cli:main"

[tool.flit.module]
name = "amdl"
