[project]
name = "applemusic-dl"
description = "一个功能强大的 Apple Music 下载工具，支持下载歌曲、音乐视频。"
requires-python = ">=3.10"
authors = [{ name = "wenfeng110402" }]
dependencies = [
    "gamdl",
    "click",
    "colorama",
    "pillow",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
desktop = [
    "pywebview",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/wenfeng110402/AppleMusic-Downloader"
repository = "https://github.com/wenfeng110402/AppleMusic-Downloader"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
amdl = "amdl.cli:main"

[tool.flit.module]
name = "amdl"